--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><script src="https://telegram.org/js/telegram-web-app.js"></script><script defer="defer" src="bundle.js?4dba30ac0709663312f7"></script></head><body><div class="app"><div id="root"></div></div></body></html>
+<!doctype html><html><head><script src="https://telegram.org/js/telegram-web-app.js"></script><script defer="defer" src="bundle.js"></script></head><body><div class="app"><div id="root"></div></div></body></html>
